no mobile display nav section and first table scroll on workouts week 2

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -131,11 +131,11 @@ main {
   background: #ff6b47;
 }
 
-/* Mobile nav */
+/* Mobile nav 
 .nav-toggle {
   <!--display: none;-->
   cursor: pointer;
-}
+}*/
 
 .nav-toggle span {
   width: 22px;
